ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-proxy-ingress
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-proxy
                port:
                  number: 80
